# qda-bertopic

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  pull_request_template.md
.github/instructions/: jupyter-data-science.instructions.md
.github/prompts/: create-instructions.prompt.md  gen-copilot-instructions.prompt.md
notebooks/: qualitative_analysis.ipynb
tests/: test_topic_modeling.py
